clean up UI, attempt to add cognito. almost working